--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>jQuery2</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/app.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
